# py-warrior

./: pyproject.toml
py_warrior/cli/: main.py
py_warrior/cli/templates/: README.md.txt  warrior.py.txt
tests/cli/: test_new.py
